--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,12 +29,11 @@
   </li>
 </ul>
 
-<div *ngFor="let product of products">
-  <!--
-  {{ product.title }}
-  <img [src]="product.image" alt="">
-  {{ product.price }}
-  -->
-  <app-product (productClicked)="clickProduct($event)" [product]="product"></app-product>
+<div class="product-grid">
+  <app-product
+    *ngFor="let product of products" 
+    (productClicked)="clickProduct($event)" 
+    [product]="product">
+  </app-product>
 
 </div>
