--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
-body{
+/*body{
     margin: 0px;
     padding: 0px;
-}
+}*/
 
 .product-grid{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    grid-gap: 30px 20px;
+}
+
+.container {
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @media (min-width: 570px){
@@ -14,4 +23,11 @@ body{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
     }
+    .container {
+        width: 1110px;
+        padding-right: 16px;
+        padding-left: 16px;
+    }
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
