- Servicios   - Creando nuestros propios servicios: HTTP Client   - Haciendo una solicitud GET desde el servicio   - Haciendo una solicitud POST desde el servicio   - Haciendo una solicitud PUT y DELETE desde el servicio   - Ambientes en Angular   - Lista de inventario y detalle   - Cierre de ejercicio de detalle

--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item [routerLink]="['/admin/create']">Crear producto</a>
       <a mat-list-item [routerLink]="['/admin/table']">Table</a>
       <a mat-list-item [routerLink]="['/admin/dashboard']">Dashboard</a>
+      <a mat-list-item [routerLink]="['/admin/products']">Products</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
