--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -23,6 +23,12 @@
       <div class="col-xs-12 col-md-4">
         <div class="box">
           <h3>Contacto</h3>
+          <mat-form-field>
+            <input matInput placeholder="Digite su correo" [formControl]="emailField" type="email">
+          </mat-form-field>
+
+          <button mat-raised-button [disabled]="emailField.invalid" (click)="sendMail()" >Enviar</button>
+
         </div>
       </div>
     </div>
