--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
                 <a mat-button routerLink="/products" routerLinkActive="active">Products</a>
                 <a mat-button routerLink="/contact" routerLinkActive="active">Contact</a>
             </nav>
-            <a mat-raised-button matBadge="4" matBadgeColor="accent">
+            <a [routerLink]="['/order']" routerLinkActive="router-link-active"  mat-raised-button [matBadge]="total$ | async" matBadgeColor="accent">
                 <mat-icon>shopping_cart</mat-icon>
                 Carrito
             </a>
