--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -9,6 +9,7 @@
       <a mat-list-item [routerLink]="['/admin/table']">Table</a>
       <a mat-list-item [routerLink]="['/admin/dashboard']">Dashboard</a>
       <a mat-list-item [routerLink]="['/admin/products']">Products</a>
+      <button mat-list-item (click)="logouth()">Cerrar sesion</button>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
