--- a/src/app/admin/components/form-product/form-product.component.html
+++ b/src/app/admin/components/form-product/form-product.component.html
@@ -41,6 +41,13 @@
                     </mat-form-field>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-xs">
+                    <img *ngIf="(image$ | async) as image" [src]="image" alt="">
+                    <input type="file" id="file" (change)="uploadFile($event)">
+                </div>
+            </div>
         </mat-card-content>
 
         <mat-card-actions>
